--- a/WebX/Flaskkk/templates/home.html
+++ b/WebX/Flaskkk/templates/home.html
@@ -6,6 +6,10 @@
     <title>Flask App WEBX</title>
 </head>
 <body>
-    <h1>This is the home page</h1>
+    <h1>Your Entered Credentials are:-</h1>
+    <ul>
+        <li>Username = admin</li>
+        <li>Password = admin</li>
+    </ul>
 </body>
 </html>
